WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
78194
ASSERT_NO_EXCEPTION should be initialized with non-zero value.
https://bugs.webkit.org/show_bug.cgi?id=78194
Summary
ASSERT_NO_EXCEPTION should be initialized with non-zero value.
Shinya Kawanaka
Reported
2012-02-08 18:55:58 PST
We found that ExceptionCode is checked without initializing. Sometimes ExceptionCode is used without initializing, but it occasionally 'initialized' as 0. We would like to ensure that "if (ec) {...}" fails if ExceptionCode is not initialized as 0.
Attachments
W.I.P.
(2.28 KB, patch)
2012-02-08 19:42 PST
,
Shinya Kawanaka
no flags
Details
Formatted Diff
Diff
W.I.P.
(2.51 KB, patch)
2012-02-08 20:02 PST
,
Shinya Kawanaka
no flags
Details
Formatted Diff
Diff
Patch
(2.58 KB, patch)
2012-02-08 20:20 PST
,
Shinya Kawanaka
no flags
Details
Formatted Diff
Diff
Patch
(2.57 KB, patch)
2012-02-08 21:32 PST
,
Shinya Kawanaka
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Shinya Kawanaka
Comment 1
2012-02-08 19:42:14 PST
Created
attachment 126224
[details]
W.I.P.
Shinya Kawanaka
Comment 2
2012-02-08 20:02:14 PST
Created
attachment 126229
[details]
W.I.P.
Shinya Kawanaka
Comment 3
2012-02-08 20:20:48 PST
Created
attachment 126232
[details]
Patch
Hajime Morrita
Comment 4
2012-02-08 21:19:30 PST
Comment on
attachment 126232
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=126232&action=review
Thanks for taking this. Our current version is error prone...
> Source/WebCore/dom/ExceptionCodePlaceholder.h:44 > + ExceptionCodePlaceholder() : m_code(defaultExceptionCode) { }
Please do this for NoExceptionAssertionChecker to keep ExceptionCodePlacerHolder code-free.
Shinya Kawanaka
Comment 5
2012-02-08 21:24:56 PST
(In reply to
comment #4
)
> (From update of
attachment 126232
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=126232&action=review
> > Thanks for taking this. Our current version is error prone... > > > Source/WebCore/dom/ExceptionCodePlaceholder.h:44 > > + ExceptionCodePlaceholder() : m_code(defaultExceptionCode) { } > > Please do this for NoExceptionAssertionChecker to keep ExceptionCodePlacerHolder code-free.
Ya, this code seems wrong, because NoExceptionAssertionChecker initializes ExceptionCode with zero. We should change this value... Let me try again.
Shinya Kawanaka
Comment 6
2012-02-08 21:26:52 PST
I was feeling weird that no error was found by this change...
Shinya Kawanaka
Comment 7
2012-02-08 21:32:16 PST
Created
attachment 126235
[details]
Patch
WebKit Review Bot
Comment 8
2012-02-09 03:22:09 PST
Comment on
attachment 126235
[details]
Patch Clearing flags on attachment: 126235 Committed
r107208
: <
http://trac.webkit.org/changeset/107208
>
WebKit Review Bot
Comment 9
2012-02-09 03:22:14 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug